# WebRustHW

./: Cargo.toml  Dockerfile  README.md  compose.yaml  questions.json
migrations/: 0001_create_up.sql  0001_tear_down.sql  create_up.sql
src/: answer.rs  main.rs  model.rs  question.rs  routes.rs
src/types/: answer.rs  question.rs
