[package]
name = "qna"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
nanoid = "0.4.0"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
